--- a/config/_default/menus.hi.toml
+++ b/config/_default/menus.hi.toml
@@ -4,10 +4,16 @@ name = "मुख्य पेज"
 url = "/"
 weight = 1
 #
-#[[main]]
-#name = "सेवाए"
-#url = "services"
-#weight = 2
+[[main]]
+name = "सेवाए"
+url = "services"
+weight = 2
+#
+#
+[[main]]
+name = "उद्देश्य"
+url = "objectives"
+weight = 3
 #
 #[[main]]
 #name = "प्रदर्शनी"
