[Mod] Changed copyright text [Fix] typo in services

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -10,7 +10,7 @@ footer_menu_middle = "Services"
 footer_menu_right = "Support"
 footer_content = "Cheshta Foundation is an Charitable Trust & Training Centre working in the field of disability management and rehabilitation"
 # copyright
-copyright = "© 2010-2021 Cheshta Foundation. All rights reserved. | Design By [Themefisher](https://themefisher.com/) Develop By [Gethugothemes](https://gethugothemes.com/)"
+copyright = "© 2010-2021 Cheshta Foundation. All rights reserved. | Design by Themefisher Developed by Gethugothemes"
 
 
 
@@ -26,4 +26,4 @@ footer_menu_middle = "सेवाएं"
 footer_menu_right = "सहायता"
 footer_content = "चेष्टा फाउंडेशन एक चैरिटेबल ट्रस्ट एंड ट्रेनिंग सेंटर है जो विकलांगता प्रबंधन और पुनर्वास के क्षेत्र में काम कर रहा है"
 # copyright
-copyright = "© 2010-2021 Cheshta Foundation. All rights reserved. | Design von [Themefisher](https://themefisher.com/) Entwickelt von [Gethugothemes](https://gethugothemes.com/)"
+copyright = "© 2010-2021 Cheshta Foundation. All rights reserved. | Design by Themefisher Developed by Gethugothemes"
