Add: list.html template for page groups like gallery Fix: removed deifferentiation of page looks based on sections, for uniform look and added services section to template Add: gallery main page Add: gallery pages for 15-16 and 16-17

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -14,10 +14,10 @@ name = "Objectives"
 url = "objectives"
 weight = 3
 #
-#[[main]]
-#name = "Gallery"
-#url = "gallery"
-#weight = 3
+[[main]]
+name = "Gallery"
+url = "gallery"
+weight = 4
 #
 #[[main]]
 #name = "FAQ"
