--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,14 +2,22 @@
 baseURL = "https://www.cheshta.org.in/"
 title = "Cheshta Foundation"
 theme = "bigspring"
-# post pagination
-paginate = "6"
+
 # post excerpt
 summaryLength = "15"
-# disqus short name
-disqusShortname = "" # get your shortname form here : https://disqus.com
+
 # google analytics
 googleAnalytics = "" # example : UA-123-45
 # unsafe html
 [markup.goldmark.renderer]
 unsafe = true
+
+# post pagination
+[pagination]
+    pagerSize = "6"
+
+# disqus short name
+[services]
+  [services.disqus]
+    shortname = "" # get your shortname form here : https://disqus.com
+
